# ai-frontend

./: .aider.chat.history.md  .gitignore  AGENTS.md  INTEGRATIONS.md  PROGRESS.md  README.md  SVELTE5_MIGRATION.md  UI_UX_IMPROVEMENTS.md  bun.lockb  package-lock.json  package.json  rust-migration-plan.md  svelte.config.js  tailwind.config.ts  terminal  tsconfig.json  vite.config.js
.claude/: settings.json
.claude/hooks/: CONFIG.md
.claude/skills/: skill-rules.json
docs/: chat-freeze-analysis.md  chat-freeze-workplan.md  file-processing-migration-summary.md  obsidian-vault-tooling-progress.md  refactoring-plan.md  rust-event-driven-implementation-log.md  rust-event-driven-refactor-tracker.md
src/: App.svelte  app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: events.rs  files.rs  integrations.rs  main.rs  oauth.rs  setup_default_values.rs  tool_outputs.rs
src-tauri/src/agent/: mod.rs  notes.rs  orchestrator.rs  prompts.rs  risk.rs  stores.rs  tests.rs
src-tauri/src/agent/prompts/: clarify.txt  controller.txt  plan.txt  reflect.txt  responder.txt  triage.txt
src-tauri/src/commands/: agent.rs  api_keys.rs  branches.rs  claude_cli.rs  conversations.rs  custom_backends.rs  file_versioning.rs  files.rs  integrations.rs  mcp_servers.rs  mod.rs  models.rs  ollama.rs  preferences.rs  system_prompts.rs  tools.rs  usage.rs
src-tauri/src/db/: error.rs  mod.rs  tests.rs
src-tauri/src/db/models/: agent.rs  branch.rs  conversation.rs  custom_backend.rs  integration_connection.rs  mcp_server.rs  message.rs  mod.rs  model.rs  system_prompt.rs  usage.rs
src-tauri/src/db/operations/: agent_sessions.rs  branches.rs  conversations.rs  custom_backends.rs  integration_connections.rs  mcp_servers.rs  messages.rs  mod.rs  models.rs  preferences.rs  system_prompts.rs  usage.rs
src-tauri/src/files/: audio.rs  image.rs  mod.rs  text.rs  versioning.rs
src-tauri/src/integrations/: google.rs  mcp.rs  mod.rs  todoist.rs
src-tauri/src/llm/: mod.rs
src-tauri/src/tools/: approvals.rs  files.rs  integrations.rs  mod.rs  prefs.rs  search.rs  tool_outputs.rs  vault.rs  web.rs
(+168 files in other folders)
