[package]
name = "ai_agent_ui"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
rusqlite = { version = "0.32.1", features = ["bundled"] }
rusqlite_migration = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.0", features = [ "http-all", "window-all", "dialog-open", "dialog-message", "dialog-confirm", "shell-open"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["v4"] }
base64 = "0.21"
image = "0.24"
mime_guess = "2.0"
reqwest = { version = "0.12", default-features = true, features = ["blocking", "json"] }
specta = { version = "1.0", features = ["export", "chrono"] }
tauri-specta = { version = "1.0", features = ["typescript"] }
jsonschema = "0.17"
env_logger = "0.11"
log = "0.4"
scraper = "0.20"
url = "2.5"
mime = "0.3"
regex = "1.10"
rand = "0.8"
sha2 = "0.10"
dotenvy = "0.15"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
